# ChangeLog for dev-lang/erlang
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.157 2009/04/08 23:11:56 fauli Exp $

*erlang-13.1-r1 (08 Apr 2009)

  08 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  +files/erlang-13.1-LDFLAGS.patch, -erlang-13.1.ebuild,
  +erlang-13.1-r1.ebuild:
  revision bump to make all modules respect LDFLAGS, patch provided by
  Davide Pesavento <davidepesa AT gmail DOT com> in bug 263129

*erlang-13.1 (07 Apr 2009)

  07 Apr 2009; Christian Faulhammer <fauli@gentoo.org> +erlang-13.1.ebuild:
  version bump for 13A beta version, brings in WxWindows bindings, ported
  ebuild to EAPI 2

  24 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  -erlang-12.2.5.ebuild:
  clean up

  18 Mar 2009; Brent Baude <ranger@gentoo.org> erlang-12.2.5-r1.ebuild:
  stable ppc, bug 261673

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  erlang-12.2.5-r1.ebuild:
  Stable on alpha, bug #261673

  15 Mar 2009; Brent Baude <ranger@gentoo.org> erlang-12.2.5-r1.ebuild:
  stable ppc64, bug 261673

  09 Mar 2009; Ferris McCormick <fmccor@gentoo.org> erlang-12.2.5-r1.ebuild:
  Sparc stable, Bug #261673.

  08 Mar 2009; Markus Meier <maekke@gentoo.org> erlang-12.2.5-r1.ebuild:
  amd64/x86 stable, bug #261673

*erlang-12.2.5-r1 (05 Feb 2009)

  05 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  +files/erlang-12.2.5-amd64_segfault.patch,
  +files/erlang-12.2.5-remove_execstack.patch, +erlang-12.2.5-r1.ebuild:
  revbump to fix executable stacks (see bug 249328 by Lars Strojny <lars AT
  strojny DOT net>) and a segfault on amd64; both taken from upstream, hint
  and inspiration by Davide Pesavento <davidepesa AT gmail DOT com>

  18 Dec 2008; Christian Faulhammer <fauli@gentoo.org>
  -files/erlang-12.2.3-gethostbyname.patch,
  -files/erlang-12.2.3-glibc28.patch, -files/erlang-12.2.4-inet_drv.patch,
  -erlang-12.2.3-r1.ebuild, -erlang-12.2.4-r1.ebuild:
  clean up
