@@ -9,6 +9,6 @@ DIST otp_doc_man_R13A.tar.gz 950006 RMD160 c082bda26b85cd6bd2ede8dd2c538e2ef50bb
 DIST otp_src_R12B-5.tar.gz 47470402 RMD160 7265ae8ebd045ec5b977148a7c9b995eb7ef2d2d SHA1 6c45509acf70d35d5def2cbefd86ada093c1ac3a SHA256 6ec3f344dd626bd83494fcad66db98a03f930a039b2a1499313d1a5a57aadda7
 DIST otp_src_R13A.tar.gz 54258791 RMD160 42ba3c4815fa702d19281f1d42faaec72a75c703 SHA1 9fa0db27611559d697fe269c3fb9a405ae24d147 SHA256 d95f059eb2fdc98d2b604482abb1738e81fc95a7172defb563fabe2d364a1e0b
 EBUILD erlang-12.2.5-r1.ebuild 4960 RMD160 a6a7a0542f2a2bbce666d5fe5070c8dc07ee503e SHA1 abdf9d8edc03d101fd743bf8d0a59fb8db50401a SHA256 8653c2e954c2d65b8f2bbc3db01d0abc7fc49593e8c1a5d1cd4cc517db3bfff1
-EBUILD erlang-13.1-r1.ebuild 4743 RMD160 05e1da90d2db635e286dd3dd79a62feee0cf0b8e SHA1 af743cc6aab3990bf8684b28c98cab7779d9f641 SHA256 e3b7cefed2a63aa830c9d4f7f4f670bb7c6ac172f30984ae96fea1e5fa9fa885
-MISC ChangeLog 25903 RMD160 f6410d40391aafcb2f775e5fca334033b61b803f SHA1 81e306e8d1f2ecfee2cad3c06f35eba782d96bfd SHA256 680696b5687812e2e95492a9ddf2c17537282fb695d82ae5a586fe7de587e1b0
+EBUILD erlang-13.1-r1.ebuild 4791 RMD160 834dd68b315ed872eb1e614953080a782f79d8ff SHA1 0a73e87a3bb5ccb478e377e26eb7e0a581ad6b85 SHA256 cf8225801e4333d9718bdc92181fd853dd0b8d88741bef5aa66836814e847160
+MISC ChangeLog 26044 RMD160 c866e76eb5620fab8b9247c17313247ef390353c SHA1 5b106a6fcfa6820785a6694c89bfcc403a79f8f9 SHA256 13ad489537f99f3a70c768f0230058aa5c0eb27aefc9820745021b5ab8285c42
 MISC metadata.xml 693 RMD160 6c8d43bd35549421b055b468c45f1f2e5d39357d SHA1 7c778bbc7faf1dfdc11a6155e1c525e42d63ebb5 SHA256 ee0ac0699562802a5191deaef78770c25a342875a3b363ea95a0b92da6f107e3
