@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/erlang
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.157 2009/04/08 23:11:56 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.158 2009/04/20 17:24:46 fauli Exp $
+
+  20 Apr 2009; Christian Faulhammer <fauli@gentoo.org> erlang-13.1-r1:
+  Note in comment, that the LDFLAGS patch has been accepted upstream
 
 *erlang-13.1-r1 (08 Apr 2009)
 
